update adaptive slider and footer

--- a/public/index.html
+++ b/public/index.html
@@ -509,7 +509,7 @@
                                         unde omnis iste natus error sit<br>
                                         voluptatem accusantium doloremque
                                     </p>
-                                    <h3 class="name text-right">Shahe Sheikh</h3>
+                                    <h3 class="name text-right">Shahe Sheik</h3>
                                     <cite class="text-uppercase text-right">DESIGNER</cite>
                                 </div>
                                 <div class="reviews-image">
